Fixed label overlapping  issue
Removed bottom margin from input field

--- a/src/styles/styles-port/modules/auth.scss
+++ b/src/styles/styles-port/modules/auth.scss
@@ -51,12 +51,12 @@ img.auth-logo {
     position: relative;
 
     input {
-        margin-bottom: 0px;
+        margin-bottom: 0px !important;
     }
 
     .input-field {
-        height: 72px;
-        max-height: 72px;
+        height: 72px !important;
+        max-height: 72px !important;
     }
 }
 
